azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vnetName": {
            "type": "string",
            "defaultValue": "concoursevnet",
            "metadata": {
                "description": "Virtual Network name for new Concourse VNET"
            }
        },
        "concourseWebSourcePrefix": {
            "type": "string",
            "defaultValue": "0.0.0.0/0",
            "metadata": {
                "description": "CIDR block for access to Concourse Web"
            }
        },
        "deployBastion": {
            "type": "bool",
            "defaultValue": true,
            "metadata": {
                "description": "Deploy Azure Bastion for VM console access"
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "psqlServerNamePrefix": {
            "type": "string",
            "defaultValue": "concourse",
            "metadata": {
                "description": "Server Name for Azure database for PostgreSQL, will be suffixed automatically with unique string"
            }
        },
        "psqlAdministratorLogin": {
            "type": "string",
            "minLength": 1,
            "defaultValue": "concourseadmin",
            "metadata": {
                "description": "Database administrator login name"
            }
        },
        "psqlAdministratorLoginPassword": {
            "type": "securestring",
            "minLength": 8,
            "metadata": {
                "description": "Database administrator password"
            }
        },
        "webVmSize": {
            "type": "string",
            "defaultValue": "Standard_D4s_v4",
            "metadata": {
                "description": "Size for Concourse Web VM"
            }
        },
        "workerVmSize": {
            "type": "string",
            "defaultValue": "Standard_D4s_v4",
            "metadata": {
                "description": "Size for Concourse Worker VMs"
            }
        },
        "linuxUserName": {
            "type": "string",
            "defaultValue": "concourseadmin",
            "metadata": {
                "description": "User name for linux VMs"
            }
        },
        "linuxSSHKey": {
            "type": "string",
            "metadata": {
                "description": "Public key for SSH authentication"
            }
        },
        "numberOfWorkers": {
            "type": "int",
            "defaultValue": 2,
            "metadata": {
                "description": "Number of Concourse Worker VMs"
            }
        },
        "concourseLocalUser": {
            "type": "string",
            "minLength": 1,
            "defaultValue": "concourseadmin",
            "metadata": {
                "description": "Concourse local user name"
            }
        },
        "concourseLocalPassword": {
            "type": "securestring",
            "minLength": 8,
            "metadata": {
                "description": "Concourse local user password"
            }
        }
    },
    "functions": [],
    "variables": {
        "vnetPrefix": "10.0.0.0/16",
        "concourseSubnetPrefix": "10.0.0.0/24",
        "appGwSubnetPrefix": "10.0.1.0/26",
        "azureBastionSubnetPrefix": "10.0.1.64/27",
        "psqlSkuName": "GP_Gen5_2",
        "psqlSkuTier": "GeneralPurpose",
        "psqlSkuCapacity": 2,
        "psqlSkuSizeMb": 51200,
        "psqlSkuFamily": "Gen5",
        "psqlVersion": "11",
        "psqlBackupRetentionDays": 7,
        "resgpguid": "[substring(replace(guid(resourceGroup().id), '-', ''), 0, 4)]",
        "psqlServerName": "[concat(parameters('psqlServerNamePrefix'), variables('resgpguid'))]",
        "concourseDownload": "https://github.com/concourse/concourse/releases/download/v6.6.0/concourse-6.6.0-linux-amd64.tgz",
        "installScript": "https://raw.githubusercontent.com/dwrightmsft/concourse-ci/main/scripts/install-web.sh"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "appGateway",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "Port_80",
                        "properties": {
                            "description": "Access to Concourse via port 80",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "[parameters('concourseWebSourcePrefix')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "appGwAdmin",
                        "properties": {
                            "description": "AppGw required ports",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "65200-65535",
                            "sourceAddressPrefix": "GatewayManager",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "appGwAdmin2",
                        "properties": {
                            "description": "AppGw required ports",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "bastion",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-05-01",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "bastion-in-allow",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "bastion-control-in-allow",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "GatewayManager",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "bastion-in-deny",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 900,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "bastion-vnet-out-allow",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationPortRanges": [ "22", "3389" ],
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "bastion-azure-out-allow",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "AzureCloud",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('vnetName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'appGateway')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'bastion')]"
            ],
            "tags": {
                "displayName": "[parameters('vnetName')]"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vnetPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "ConcourseSubnet",
                        "properties": {
                            "addressPrefix": "[variables('concourseSubnetPrefix')]",
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Sql"
                                }
                            ]
                        }
                    },
                    {
                        "name": "ApplicationGatewaySubnet",
                        "properties": {
                            "addressPrefix": "[variables('appGwSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'appGateway')]"
                            }
                        }
                    },
                    {
                        "name": "AzureBastionSubnet",
                        "properties": {
                            "addressPrefix": "[variables('azureBastionSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'bastion')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "condition": "[parameters('deployBastion')]",
            "apiVersion": "2020-05-01",
            "name": "bastion",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Standard"
            },
            "tags": {
                "displayName": "bastion"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "name": "bastion",
            "condition": "[parameters('deployBastion')]",
            "type": "Microsoft.Network/bastionHosts",
            "apiVersion": "2020-05-01",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', 'bastion')]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
            ],
            "tags": {},
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), 'AzureBastionSubnet')]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'bastion')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.DBforPostgreSQL/servers",
            "apiVersion": "2017-12-01",
            "name": "[variables('psqlServerName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
            ],
            "sku": {
                "name": "[variables('psqlSkuName')]",
                "tier": "[variables('psqlSkuTier')]",
                "capacity": "[variables('psqlSkuCapacity')]",
                "size": "[variables('psqlSkuSizeMB')]",
                "family": "[variables('psqlSkuFamily')]"
            },
            "properties": {
                "createMode": "Default",
                "version": "[variables('psqlVersion')]",
                "administratorLogin": "[parameters('psqlAdministratorLogin')]",
                "administratorLoginPassword": "[parameters('psqlAdministratorLoginPassword')]",
                "storageProfile": {
                    "storageMB": "[variables('psqlSkuSizeMB')]",
                    "backupRetentionDays": "[variables('psqlBackupRetentionDays')]",
                    "geoRedundantBackup": "Disabled"
                }
            },
            "resources": [
                {
                    "type": "virtualNetworkRules",
                    "apiVersion": "2017-12-01",
                    "name": "concourseRule",
                    "dependsOn": [
                        "[resourceId('Microsoft.DBforPostgreSQL/servers/', variables('psqlServerName'))]"
                    ],
                    "properties": {
                        "virtualNetworkSubnetId": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), 'ConcourseSubnet')]",
                        "ignoreMissingVnetServiceEndpoint": true
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-05-01",
            "name": "web",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "web"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/', parameters('vnetName'))]",
                "[resourceId('Microsoft.Network/applicationGateways', 'concourseAppGateway')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "applicationGatewayBackendAddressPools": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/applicationGateways', 'concourseAppGateway'), '/backendAddressPools/webBackendPool')]"
                                }
                            ],
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), 'ConcourseSubnet')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "web",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', 'web')]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('webVmSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "18.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "web-OSDisk",
                        "caching": "ReadWrite",
                        "createOption": "FromImage",
                        "diskSizeGB": 64,
                        "osType": "Linux",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    }
                },
                "osProfile": {
                    "computerName": "web",
                    "adminUsername": "[parameters('linuxUserName')]",
                    "linuxConfiguration": {
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "[concat('/home/', parameters('linuxUsername'), '/.ssh/authorized_keys')]",
                                    "keyData": "[parameters('linuxSSHKey')]"
                                }
                            ]
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', 'web')]"
                        }
                    ]
                }
            },
            "resources": [
                {
                    "apiVersion": "2019-07-01",
                    "type": "extensions",
                    "name": "install-concourse-web",
                    "location": "[resourceGroup().location]",
                    "dependsOn": [
                        "[resourceId('Microsoft.Compute/virtualMachines/', 'web')]",
                        "[resourceId('Microsoft.DBforPostgreSQL/servers', variables('psqlServerName'))]",
                        "[resourceId('Microsoft.DBforPostgreSQL/servers/virtualNetworkRules', variables('psqlServerName'), 'concourseRule')]"
                    ],
                    "properties": {
                        "publisher": "Microsoft.Azure.Extensions",
                        "type": "CustomScript",
                        "typeHandlerVersion": "2.1",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "fileUris": [
                                "[variables('installScript')]"
                            ]
                        },
                        "protectedSettings": {
                            "commandToExecute": "[concat('sudo bash install-web.sh \"', variables('concourseDownload'), '\" ', parameters('psqlAdministratorLogin'), ' ', parameters('psqlAdministratorLoginPassword'), ' ', variables('psqlServerName'), ' ', reference(resourceId('Microsoft.DBforPostgreSQL/servers', variables('psqlServerName')), '2017-12-01').fullyQualifiedDomainName, ' ', parameters('concourseLocalUser'), ' ', parameters('concourseLocalPassword'), ' ', reference(resourceId('Microsof [...]
                        }
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-05-01",
            "name": "[concat('worker', copyindex(1))]",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "[concat('worker', copyindex(1))]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/', parameters('vnetName'))]"
            ],
            "copy": {
                "name": "workercopy",
                "count": "[parameters('numberOfWorkers')]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), 'ConcourseSubnet')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat('worker', copyindex(1))]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces/', concat('worker', copyindex(1)))]"
            ],
            "identity": {
                "type": "SystemAssigned"
            },
            "copy": {
                "name": "workercopy",
                "count": "[parameters('numberOfWorkers')]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('workerVmSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "18.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat('worker', copyindex(1), '-OSDisk')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage",
                        "diskSizeGB": 64,
                        "osType": "Linux",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    },
                    "dataDisks": [
                        {
                            "name": "[concat('worker', copyindex(), '-DataDisk')]",
                            "caching": "ReadWrite",
                            "createOption": "Empty",
                            "lun": 0,
                            "diskSizeGB": 512,
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS"
                            }
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[concat('worker', copyindex(1))]",
                    "adminUsername": "[parameters('linuxUserName')]",
                    "linuxConfiguration": {
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "[concat('/home/', parameters('linuxUsername'), '/.ssh/authorized_keys')]",
                                    "keyData": "[parameters('linuxSSHKey')]"
                                }
                            ]
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat('worker', copyindex(1)))]"
                        }
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-05-01",
            "name": "concourseAppGateway",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard"
            },
            "tags": {
                "displayName": "concourseAppGateway"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "type": "Microsoft.Network/applicationGateways",
            "apiVersion": "2020-05-01",
            "name": "concourseAppGateway",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses/', 'concourseAppGateway')]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
            ],
            "properties": {
                "sku": {
                    "name": "Standard_v2",
                    "tier": "Standard_v2"
                },
                "autoscaleConfiguration": {
                    "minCapacity": 1,
                    "maxCapacity": 10
                },
                "gatewayIPConfigurations": [
                    {
                        "name": "appGatewayIpConfig",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), 'ApplicationGatewaySubnet')]"
                            }
                        }
                    }
                ],
                "frontendIPConfigurations": [
                    {
                        "name": "appGatewayFrontendIP",
                        "properties": {
                            "PublicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'concourseAppGateway')]"
                            }
                        }
                    }
                ],
                "frontendPorts": [
                    {
                        "name": "appGatewayFrontendPort",
                        "properties": {
                            "Port": 80
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "webBackendPool",
                        "properties": {}
                    }
                ],
                "backendHttpSettingsCollection": [
                    {
                        "name": "appGatewayBackendHttpSettings",
                        "properties": {
                            "Port": 8080,
                            "Protocol": "Http",
                            "CookieBasedAffinity": "Disabled"
                        }
                    }
                ],
                "httpListeners": [
                    {
                        "name": "webHttpListener",
                        "properties": {
                            "FrontendIPConfiguration": {
                                "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendIPConfigurations', 'concourseAppGateway', 'appGatewayFrontendIP')]"
                            },
                            "FrontendPort": {
                                "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendPorts',  'concourseAppGateway', 'appGatewayFrontendPort')]"
                            },
                            "Protocol": "Http",
                            "SslCertificate": null
                        }
                    }
                ],
                "requestRoutingRules": [
                    {
                        "Name": "webRule",
                        "properties": {
                            "RuleType": "Basic",
                            "httpListener": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways/httpListeners', 'concourseAppGateway', 'webHttpListener')]"
                            },
                            "backendAddressPool": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways/backendAddressPools', 'concourseAppGateway', 'webBackendPool')]"
                            },
                            "backendHttpSettings": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways/backendHttpSettingsCollection', 'concourseAppGateway', 'appGatewayBackendHttpSettings')]"
                            }
                        }
                    }
                ]
            }
        }
    ],
    "outputs": {}
}
